# SpyCblock

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.10-pre1  CTestTestfile.cmake  DefinitionMacro.h  LICENSE.md  Makefile  ParserBlock.cpp  ParserMain.cpp  README.md  RunTest.cpp  SpyCBlock  cmake_install.cmake  conf-rpc.properties  conf.properties  formatting_code.sh  parsingBlockchain  parsingBlockchain.cbp  runTests  spyCblock  spyCblock.cbp
.github/: FUNDING.yml
benchmark/: BenckmarkMain  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  Makefile  SpyCBlock-benchmarck  conf.properties  run-benchmark.sh
benchmark/result/: result-i5-6300U@4x3GHz-gcc-7.4.0.txt  result-i7-4790@8x4GHz-gcc-7.4.0.txt
benchmark/result/json/: i5-6300U@4x_3GH_gcc7.4.0.json  i5-6300U@4x_3GH_gcc8.2.0_no_witness.json  i5-6300U@4x_3GH_gcc8.2.0_witness.json  scalability-benckmark-{YOUR-DETAILS-CPU-COMPILER} (copy).json  scalability-benckmark-{YOUR-DETAILS-CPU-COMPILER}.json
benchmark/src/: BanckMerchSerializationGraph.cpp  BenchmarkMain.cpp  ResultBenchMark.h
core/: ConfiguratorSingleton.cpp  ConfiguratorSingleton.h  ParserMain.cpp  SpyCBlock.cpp  SpyCBlock.h
crypto/: CryptoCore.cpp  CryptoCore.h  DSha256.cpp  DSha256.h  UtilCrypto.cpp  cryptosingleton.cpp  cryptosingleton.h  utilcrypto.cpp  utilcrypto.h
cryptobitcoin/: Sha256.cpp  Sha256Hash.cpp  Sha256Hash.hpp  TestHelper.hpp
debug/: conf.properties  valgrind-session.sh
docs/: README.md  _config.yml  configure.md  index.md  install.md
installer/: compile-test.sh  compile-without-dependence.sh  compile.sh  create-bin.sh  dependences.sh  personalInformationGithub.txt  update-submodule.sh
persistence/: DAOBlockchain.cpp  DAOBlockchain.h  DAOException.cpp  DAOException.h  IDAOBlockchain.h  SerializationUtil.cpp  SerializationUtil.h  serializationutil.cpp  serializationutil.h
persistence/graph/: DAOManagerGraph.cpp
persistence/graph/transactions/: DAOTransactionsGraph.cpp  DAOTransactionsGraph.h
persistence/json/: DAOBlkToJson.cpp  DAOBlkToJson.h  DAOJson.cpp  DAOJson.h
src/: DefinitionMacro.h
src/core/: ConfiguratorSingleton.cpp  ConfiguratorSingleton.h  ParserMain.cpp  SpyCBlock.cpp  SpyCBlock.h
src/crypto/: CryptoCore.cpp  CryptoCore.h  UtilCrypto.cpp  UtilCrypto.h
src/cryptobitcoin/: Sha256.cpp  Sha256.hpp  Sha256Hash.cpp  Sha256Hash.hpp  Sha256HashTest.cpp  Sha256Test.cpp  TestHelper.hpp  Utils.cpp  Utils.hpp
src/persistence/: DAOException.cpp  DAOException.h  IDAOBlockchain.h  SerializationUtil.cpp  SerializationUtil.h
src/persistence/graph/: DAOManagerGraph.cpp  DAOManagerGraph.h
src/persistence/graph/transactions/: DAOTransactionsGraph.cpp  DAOTransactionsGraph.h  TransactionsRawGraph.cpp  TransactionsRawGraph.h
src/persistence/json/: DAOJson.cpp  DAOJson.h
src/structure/block/: Block.cpp  Block.h  BlockHeader.cpp  BlockHeader.h  block.cpp  block.h  blockHeader.h
src/structure/script/: scriptCode.cpp  scriptCode.h
src/structure/transaction/: RawTransaction.cpp  RawTransaction.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h  TransactionWitness.cpp  TransactionWitness.h
src/structure/type/: DScript.cpp  DScript.h  DVarInt.cpp  DVarInt.h  Outpoint.cpp  Outpoint.h
src/structure/utxo/: UTXOTransaction.cpp  UTXOTransaction.h
src/util/: attributes.h  byteswap.h  common.h  endian.h  prevector.cpp  prevector.h  script.cpp  script.h  serialize.h  sha256.cpp  sha256.h  span.h  strencodings.cpp  strencodings.h  tinyformat.h  uint256.cpp  uint256.h
structure/block/: block.cpp  block.h  blockHeader.cpp  blockHeader.h
structure/transaction/: RawTransaction.cpp  RawTransaction.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h  TransactionWitness.cpp  TransactionWitness.h
structure/type/: DScript.cpp  DScript.h  DVarInt.cpp  DVarInt.h  Outpoint.cpp  Outpoint.h
test/: BugHashStructureBlockTest.cpp  CMakeLists.txt  ConfiguratorSingletonTest.cpp  DAOBlkToJsonTest.cpp  DAOBlockchainTest.cpp  DAOJsonTest.cpp  DAOManagerGraphTest.cpp  ExceptionCompactsizeTest.cpp  JsonSerializationTest.cpp  NullDataTransactionsTest.cpp  RunTest.cpp  SHABitcoinCoreTest.cpp  SerealizationTest.cpp  SerializationDataCompressedZLib.cpp  StructureBitcoinCoreTest.cpp  conf.properties  daojsontest.cpp  jsonserializationtest.cpp  nulldatatransactiontest.cpp  serealizationtest.cpp
test/file_test/: complete_block_second_file_blk_to_string.txt  first_block_deserialize.txt  previus_hash_block_header_second_file_blk.txt
test/log/: read_first_block_another_file_blk.log20190226-194913.25022  read_first_block_another_file_blk.log20190226-195356.25358  read_first_block_another_file_blk.log20190226-195418.25403  read_first_block_another_file_blk.log20190226-195855.26142  read_first_block_another_file_blk.log20190226-200553.26515  read_first_block_another_file_blk.log20190226-201312.27011  runTests.INFO
test/util/: DAOUtilTest.cpp  DAOUtilTest.h
type/: DScript.cpp  DScript.h  DVarInt.cpp  DVarInt.h  Outpoint.cpp  Outpoint.h
ultimate_version/build-SpyCblock-Desktop-Default/: CMakeCache.txt  Makefile  spyCblock  spyCblock.cbp
util/: common.h  prevector.cpp  script.cpp  serialize.h  sha256.cpp  strencodings.cpp  uint256.cpp  uint256.h
